cdk.out/WordpressStack.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "wp-dev-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/Resource"
   }
  },
  "VpcwpdevpublicSubnet1SubnetB4CF9076": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "wp-dev-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-publicSubnet1/Subnet"
   }
  },
  "VpcwpdevpublicSubnet1RouteTableD48E163D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-publicSubnet1/RouteTable"
   }
  },
  "VpcwpdevpublicSubnet1RouteTableAssociation917495B8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcwpdevpublicSubnet1RouteTableD48E163D"
    },
    "SubnetId": {
     "Ref": "VpcwpdevpublicSubnet1SubnetB4CF9076"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcwpdevpublicSubnet1DefaultRoute67422DDC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcwpdevpublicSubnet1RouteTableD48E163D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-publicSubnet1/DefaultRoute"
   }
  },
  "VpcwpdevpublicSubnet1EIPAED65D13": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-publicSubnet1/EIP"
   }
  },
  "VpcwpdevpublicSubnet1NATGatewayA9357629": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "VpcwpdevpublicSubnet1SubnetB4CF9076"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcwpdevpublicSubnet1EIPAED65D13",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcwpdevpublicSubnet1DefaultRoute67422DDC",
    "VpcwpdevpublicSubnet1RouteTableAssociation917495B8"
   ],
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-publicSubnet1/NATGateway"
   }
  },
  "VpcwpdevprivatewithnatSubnet1Subnet3D82CE84": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "wp-dev-private-with-nat"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-private-with-natSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-with-natSubnet1/Subnet"
   }
  },
  "VpcwpdevprivatewithnatSubnet1RouteTableB4AE3971": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-private-with-natSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-with-natSubnet1/RouteTable"
   }
  },
  "VpcwpdevprivatewithnatSubnet1RouteTableAssociationBB79ECDB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcwpdevprivatewithnatSubnet1RouteTableB4AE3971"
    },
    "SubnetId": {
     "Ref": "VpcwpdevprivatewithnatSubnet1Subnet3D82CE84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-with-natSubnet1/RouteTableAssociation"
   }
  },
  "VpcwpdevprivatewithnatSubnet1DefaultRouteE5178A2C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcwpdevprivatewithnatSubnet1RouteTableB4AE3971"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcwpdevpublicSubnet1NATGatewayA9357629"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-with-natSubnet1/DefaultRoute"
   }
  },
  "VpcwpdevprivateisolatedSubnet1SubnetA847F8DE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "wp-dev-private-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-private-isolatedSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-isolatedSubnet1/Subnet"
   }
  },
  "VpcwpdevprivateisolatedSubnet1RouteTableCF4731F2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "WordpressStack/Vpc/wp-dev-private-isolatedSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-isolatedSubnet1/RouteTable"
   }
  },
  "VpcwpdevprivateisolatedSubnet1RouteTableAssociationB87A6059": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcwpdevprivateisolatedSubnet1RouteTableCF4731F2"
    },
    "SubnetId": {
     "Ref": "VpcwpdevprivateisolatedSubnet1SubnetA847F8DE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/wp-dev-private-isolatedSubnet1/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "wp-dev-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc8378EB38"
    },
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/VPCGW"
   }
  },
  "VpcRestrictDefaultSecurityGroupCustomResourceC73DA2BE": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "Vpc8378EB38",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "606417009885"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-northeast-1:606417009885:security-group/",
             {
              "Fn::GetAtt": [
               "Vpc8378EB38",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-606417009885-ap-northeast-1",
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "WordpressStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "SgEC23ABC55F9": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security Group for EC2",
    "GroupName": "wp-dev-sg-ec2",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/SgEC2/Resource"
   }
  },
  "SgEndpontAFE4CB0C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security Group for Endpoint",
    "GroupName": "wp-dev-sg-endpoint",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/SgEndpont/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/22QTQvCMAyGf4v3rn6B4lFExIuUTbxKV6OLbu1o08kQ/7udX/XgKW+ehPShIz6d8UFPXl2iDpekxJzfMpLqwgLagxrx265WbHHUO7FgwuclqsznGqhjMaXGE2xlXkLkkc2dMwolodHf5S4s16IrG0krSXCVLRMWmxDj4bUmsCF/Fl4m725OQbWoQBPLQHmL1K6s8fXT4RfcWQrOeKvCs96RqWIbdP6PhDUNHsCyYA8UPuWE+nRnoqXC6P6YT/lw0js7xMR6TVgBT1/1AUssYpZUAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "WordpressStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
